# mage

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  Cargo.toml  MODULE.bazel  TODO.txt  bazel-bin  bazel-mage  bazel-out  bazel-testlogs  compile_commands.json  groups  mage.bazelproject  project.config  run-verifications
.github/workflows/: bazel-multi-platform.yml  cleanup-merged-branches.yml  codeql.yml  multi-platform.yml  pre-commit-checks.yml  test_pipeline.yml  update_branches.yml
crates/runtime/: Cargo.toml
crates/runtime/src/: runtime.rs
crates/types/: Cargo.toml
crates/types/src/: complex.rs
examples/: Cargo.toml
examples/src/: guess_game.rs  protos_test.rs  runtime_app.rs
main/: BUILD.bazel  main.cpp  main.hpp
protocols/protocols/: test.pb.cc  test.pb.h
protocols/test-proto/: BUILD.bazel  Cargo.toml  build.rs  test.proto
protocols/test-proto/src/: lib.rs
protocols/test_v1/: BUILD.bazel  TestMessage.hpp
scripts/: check_pragma_once.py  gen_compile_commands.py  refresh_compile_commands.sh  run-verifications
utl/cast/: BUILD.bazel  Narrow.hpp
utl/cast/test/: BUILD.bazel  NarrowTest.cpp
utl/containers/: BUILD.bazel  FenwickTree.hpp  RingBuffer.cpp  RingBuffer.hpp
utl/containers/test/: BUILD.bazel  FenwickTreeTest.cpp  RingBufferTest.cpp
utl/log/: BUILD.bazel  Check.hpp  Log.hpp  StdoutLogSink.cpp  StdoutLogSink.hpp
