###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "mage",
    version = "1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "googletest", version = "1.17.0")
