###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "mage",
    version = "1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.4")

bazel_dep(name = "protobuf", version = "31.1")

bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "rules_proto_grpc_cpp", version = "5.5.0")

bazel_dep(name = "abseil-cpp", version = "20250512.1")

bazel_dep(name = "gsl", version = "4.0.0")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)
