[package]
name = "examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Example binaries for component testing rust integration."

[[bin]]
name = "guess_game"
path = "src/guess_game.rs"

[[bin]]
name = "protos_test"
path = "src/protos_test.rs"

[[bin]]
name = "runtime_app"
path = "src/runtime_app.rs"

[dependencies]
types = { workspace = true }
runtime = {workspace = true }
rand = { workspace = true }
prost = { workspace = true }
test-proto = { workspace = true }
