cc_library(
    name = "logger",
    hdrs = [
        "main.hpp",
    ],
    deps =
        [
            "//protocols/test-proto:test_cc_proto",
        ],
)

cc_binary(
    name = "mage",
    srcs = [
        "main.cpp",
    ],
    copts = [
        "-std=c++23",
    ],
    deps = [
        ":logger",
    ],
)
