cc_library(
    name = "logger",
    hdrs = [
        "main.hpp",
    ],
    deps =
        [
            "//protocols/test-proto:test_cc_proto",
        ],
)

cc_binary(
    name = "mage",
    srcs = [
        "main.cpp",
    ],
    deps = [
        ":logger",
        "//utl/log",
        "//utl/log:log-stdout-sink",
    ],
)
