[package]
name = "test-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protocol buffer definitions for test messages"

[lib]
name = "test_proto"
path = "src/lib.rs"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
