package(
    default_visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "cc-lib",
    srcs = [
        "RingBuffer.cpp",
    ],
    hdrs = [
        "FenwickTree.hpp",
        "RingBuffer.hpp",
    ],
    deps = [
        "//utl/cast:narrow",
    ],
    implementation_deps = [
        "//utl/log",
    ],
)
