package(
    default_visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "log",
    hdrs = [
        "Log.hpp",
    ],
    deps = [
        "@abseil-cpp//absl/log:log",
    ],
)

cc_library(
    name = "check",
    hdrs = [
        "Check.hpp",
    ],
    deps = [
        "@abseil-cpp//absl/log:check",
    ],
)

cc_library(
    name = "log-stdout-sink",
    srcs = [
        "StdoutLogSink.cpp",
    ],
    hdrs = [
        "StdoutLogSink.hpp",
    ],
    deps = [
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/log:log_sink_registry",
    ],
)
